# mcp-context-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/landing/: index.html
examples/advanced/: fastapi_integration.py
examples/basic/: hello_world.py
mcp/: pyproject.toml  test_requirements.txt
mcp/.github/: release.yml
mcp/.github/workflows/: ci.yml  pages.yml
mcp/docs/landing/: index.html
mcp/examples/: mcp_cli.py  streamlit_ui.py
mcp/examples/coding_assistant/: app.py
mcp/examples/fastapi_app/: main.py
mcp/mcp/schemas/: loader.py
mcp/schemas/: coding.context.v1.json
mcp/schemas/coding/v1/: context.json
mcp/tests/test_cli/: test_cli.py
mcp/tests/test_core/: test_builder.py  test_context.py  test_converter.py
mcp/tests/test_schemas/: test_loader.py
schemas/coding/v1/: context.json
tests/unit/: test_schema_loader.py
